[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/UIManager/CardInfoPopup.gd" type="Script" id=1]

[node name="CardInfoPopup" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 267.0
margin_top = 152.0
margin_right = -257.0
margin_bottom = -198.0
rect_min_size = Vector2( 190, 66.5 )
popup_exclusive = true
window_title = "Credit Card Information"
resizable = true
dialog_text = "Please fill out your credit card info to continue with your purchase:"
dialog_hide_on_ok = false
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -96.0
margin_right = 242.0
margin_bottom = 96.0

[node name="HB" type="HBoxContainer" parent="VB"]
margin_right = 484.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VB/HB"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 19.0
text = "Card Number"

[node name="CardNumber" type="LineEdit" parent="VB/HB"]
margin_left = 88.0
margin_right = 484.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "####-####-####-####"

[node name="HB2" type="HBoxContainer" parent="VB"]
margin_top = 28.0
margin_right = 484.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VB/HB2"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
text = "Expiration Date"

[node name="TextureRect" type="TextureRect" parent="VB/HB2"]
visible = false
margin_left = 109.0
margin_right = 484.0
margin_bottom = 14.0

[node name="Date" type="LineEdit" parent="VB/HB2"]
margin_left = 101.0
margin_right = 484.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "dd-mm-YY"

[node name="HB3" type="HBoxContainer" parent="VB"]
margin_top = 56.0
margin_right = 484.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VB/HB3"]
margin_top = 5.0
margin_right = 23.0
margin_bottom = 19.0
text = "PIN"

[node name="PIN" type="LineEdit" parent="VB/HB3"]
margin_left = 27.0
margin_right = 85.0
margin_bottom = 24.0
size_flags_horizontal = 2
placeholder_text = "###"

[connection signal="text_changed" from="VB/HB/CardNumber" to="." method="_on_CardNumber_text_changed"]
[connection signal="text_changed" from="VB/HB2/Date" to="." method="_on_Date_text_changed"]
[connection signal="text_changed" from="VB/HB3/PIN" to="." method="_on_PIN_text_changed"]
